--- a/app/styles/mobile.less
+++ b/app/styles/mobile.less
@@ -21,16 +21,15 @@ body{
 
 .socials{
   
-  width: 240px;
+  width: 276px;
   margin:0 auto;
   margin-top: 40px;
-  a{
+  a,div{
     background-image: url('../images/sprite-rs.svg');
     width: 36px;
     height: 35px;
     display: inline-block;
-
-    
+    cursor: pointer;
 
     &.facebook{
       background-position: 0px top;
@@ -74,6 +73,12 @@ body{
       {
         background-position:-186px bottom;
       }
+    }
+    &.fr{
+      background-position: -335px bottom;
+    }
+    &.en{
+      background-position: -373px bottom;
     }
   }
 }
