--- a/app/views/main.html
+++ b/app/views/main.html
@@ -22,7 +22,7 @@
   <a href="https://github.com/Nighthawk14" class="nav-link github" target="_blank"></a>
   <a href="http://fr.linkedin.com/pub/antoine-savignac/3b/884/613/" class="nav-link linkedin" target="_blank"></a>
   <a href="https://coderbits.com/NightHawk" class="nav-link coderbits" target="_blank"></a>
-  <a href="/cv-antoine-savignac.pdf" class="nav-link cv" target="_blank"></a>
+  <a href="https://drive.google.com/file/d/0ByTZqMiGXKIAaFBOLVJRdG5GdTg/view?usp=sharing" class="nav-link cv" target="_blank"></a>
 </div>
 <div nav></div>
 <script type="text/javascript" src="scripts/scripts.js"></script>
